// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNavigation /> should render correctly for admin user 1`] = `
<div
  className="col-lg-2 fixed-top  d-none d-lg-block"
  id="side-navigation"
>
  <div
    className="mt-5 text-center"
  >
    <p
      className="lead text-white pt-3 text-capitalize"
      id="name"
    >
      test-name
    </p>
  </div>
  <div
    className="pt-3 navigation-links"
  >
    <div
      className="list-group"
    >
      <a
        className="list-group-item"
        href="/events"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-user-circle fa-fw"
        />
          My Events
      </a>
      <a
        className="list-group-item"
        href="addEvent"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-plus fa-fw"
        />
          Add Events
      </a>
      <a
        className="list-group-item"
        href="/centers2"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-bank fa-fw"
        />
          Centers
      </a>
      <div>
        <a
          className="list-group-item"
          href="/addCenter"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fa fa-plus fa-fw"
          />
            Add Center
        </a>
        <a
          className="list-group-item"
          href="/transactions"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fa fa-tasks fa-fw"
          />
            Transactions
        </a>
      </div>
      <a
        className="list-group-item"
        href="/"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-power-off fa-fw"
        />
          Logout
      </a>
    </div>
  </div>
</div>
`;

exports[`<SideNavigation /> should render correctly for normal user 1`] = `
<div
  className="col-lg-2 fixed-top  d-none d-lg-block"
  id="side-navigation"
>
  <div
    className="mt-5 text-center"
  >
    <p
      className="lead text-white pt-3 text-capitalize"
      id="name"
    >
      test-name
    </p>
  </div>
  <div
    className="pt-3 navigation-links"
  >
    <div
      className="list-group"
    >
      <a
        className="list-group-item"
        href="/events"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-user-circle fa-fw"
        />
          My Events
      </a>
      <a
        className="list-group-item"
        href="addEvent"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-plus fa-fw"
        />
          Add Events
      </a>
      <a
        className="list-group-item"
        href="/centers2"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-bank fa-fw"
        />
          Centers
      </a>
      <a
        className="list-group-item"
        href="/"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-power-off fa-fw"
        />
          Logout
      </a>
    </div>
  </div>
</div>
`;

exports[`<SideNavigation /> should render correctly for super admin user 1`] = `
<div
  className="col-lg-2 fixed-top  d-none d-lg-block"
  id="side-navigation"
>
  <div
    className="mt-5 text-center"
  >
    <p
      className="lead text-white pt-3 text-capitalize"
      id="name"
    >
      test-name
    </p>
  </div>
  <div
    className="pt-3 navigation-links"
  >
    <div
      className="list-group"
    >
      <a
        className="list-group-item"
        href="/events"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-user-circle fa-fw"
        />
          My Events
      </a>
      <a
        className="list-group-item"
        href="addEvent"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-plus fa-fw"
        />
          Add Events
      </a>
      <a
        className="list-group-item"
        href="/centers2"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-bank fa-fw"
        />
          Centers
      </a>
      <div>
        <a
          className="list-group-item"
          href="/addCenter"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fa fa-plus fa-fw"
          />
            Add Center
        </a>
        <a
          className="list-group-item"
          href="/addAdmin"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fa fa-user fa-fw"
          />
            Add Admin
        </a>
        <a
          className="list-group-item"
          href="/transactions"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fa fa-tasks fa-fw"
          />
            Transactions
        </a>
      </div>
      <a
        className="list-group-item"
        href="/"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-power-off fa-fw"
        />
          Logout
      </a>
    </div>
  </div>
</div>
`;
